# Voice-Agent

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
Docs/: Description.md  Problemstatement.md  architecture.md  low-level-architecture.md
Skills/: architectureskills.md  readmeskill.md
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
lib/agent/: engine.ts  geminiTools.ts  guardrails.ts  llm.ts  llmTools.ts  offlinePhase1.ts  prompts.ts  state.ts  toolHandlers.ts
lib/env/: loadRepoRootEnv.ts
lib/mcp/: schedulingMcpClient.ts  schedulingTypes.ts
lib/voice/: stt.ts  tts.ts
phase-1-text-agent/: README.md  evals.md  implementation.md  outputs.md  tests.md
phase-2-scheduling-core/: .gitignore  README.md  evals.md  implementation.md  outputs.md  package-lock.json  package.json  tests.md
phase-2-scheduling-core/fastmcp_server/: README.md  pyproject.toml
phase-2-scheduling-core/fastmcp_server/advisor_mcp/: __init__.py  __main__.py  bridge.py
phase-2-scheduling-core/mcp/: advisor-mcp-server.ts  advisorToolRuntime.ts
phase-2-scheduling-core/mcp-client/: schedulingDirectInvoke.ts  schedulingMcpClient.ts  schedulingTypes.ts
phase-2-scheduling-core/scripts/: gmail-oauth-token.mts  mcp-one-shot-call.mts
phase-2-scheduling-core/src/: booking_code.ts  env.ts  gmail_send.ts  google_auth.ts  google_calendar.ts  index.ts  (+6 more)
phase-3-post-call-pii/: README.md  evals.md  implementation.md  tests.md
scripts/: calendar-tomorrow-slots.mjs  minify-service-account-json.mjs  phase1-smoke.mjs  verify-sheets-tabs.mts
(+13 files in other folders)
